[metadata]
name = ws_client
version = 0.1.1
author = Mariusz Kryński
author-email = mrk@sed.pl
home-page = https://github.com/mrk-its/homeassistant-blitzortung/
description = WS client for HomeAssistant Blitzortung.org lightning detector
license = MIT
license-file = LICENSE
platform = any
keywords = ha
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
setup_requires = setuptools

install_requires =
  websockets == 10.3
  paho-mqtt == 1.5.0
  python-geohash == 0.8.5

packages =
  ws_client

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
  ws-client = ws_client:main

[options.extras_require]
dev =
  black
  flake8
tests =
